# eman2

./: .travis.yml  CMakeLists.txt  Jenkinsfile  appveyor.yml
.circleci/: config.yml
ci_support/: build_no_recipe.sh  build_recipe.sh  setup_conda.sh
cmake/: OpenGL.cmake
doc/wiki/: e2.txt  e2RCTboxer.txt  e2_real.txt  e2a2d_align.txt  e2a2d_average.txt  e2a2d_stat.txt  e2align2d.txt  e2align3d.txt  e2basis.txt  e2bdb.txt  e2boxadjust.txt  e2boxer.txt  e2boxer_old.txt  e2buildsets.txt  e2buildstacks.txt  e2classaverage.txt  e2classes_denovo.txt  e2classesbyref.txt  e2classextract.txt  e2classify.txt  e2classifykmeans.txt  e2classifyligand.txt  e2classifytree.txt  e2classptcl.txt  e2classvsproj.txt  e2cmmtomrc.txt  e2cmpxplor.txt  e2ctf.txt  e2ctf2eman1.txt  e2ctf_auto.txt  e2ctffind3util.txt  e2ctfsim.txt  e2ddd_movie.txt  e2ddd_particles.txt  e2display.txt  e2emx.txt  e2eotest.txt  e2erasefiducials.txt  e2euler_refine.txt  e2eulerxplor.txt  (+112 more)
examples/: morphboxer.py
libEM/: CMakeLists.txt  aligner.cpp  aligner.h  amiraio.cpp  analyzer.cpp  analyzer.h  averager.cpp  averager.h  boxingtools.cpp  boxingtools.h  cmp.cpp  ctf.cpp  ctf.h  df3io.cpp  dm3io.cpp  emdata.cpp  emdata.h  emdata_core.cpp  emdata_io.cpp  emdata_metadata.cpp  emdata_modular.cpp  emdata_transform.cpp  emfft.cpp  emftgl.h  emobject.cpp  emobject.h  emutil.cpp  emutil.h  exception.h  fitsio.cpp  gatan2io.cpp  geometry.h  glutil.cpp  hdfio.cpp  hdfio2.cpp  icosio.cpp  imageio.cpp  imagicio.cpp  imagicio2.cpp  jpegio.cpp  (+41 more)
libEM/gorgon/: CMakeLists.txt
libEM/sparx/: CMakeLists.txt  util_sparx.cpp
libpyEM/: CMakeLists.txt  EMAN2.py  emdata_pickle.h  emdata_wrapitems.h  emftgl.cpp  emftgl.h  glutil.h  libpyAligner2.cpp  libpyAnalyzer2.cpp  libpyAverager2.cpp  libpyCmp2.cpp  libpyEMData2.cpp  libpyEMObject2.cpp  libpyFundamentals2.cpp  libpyGLUtils2.cpp  libpyGeometry2.cpp  libpyMarchingCubes2.cpp  libpyPDBReader2.cpp  libpyPointArray2.cpp  libpyPolarData2.cpp  libpyProcessor2.cpp  libpyProjector2.cpp  libpyReconstructor2.cpp  libpyTomoSeg2.cpp  libpyTransform2.cpp  libpyTypeConverter2.cpp  libpyUtils2.cpp  typeconverter.cpp  typeconverter.h
libpyEM/qtgui/: emapplication.py  emboxerbase.py  embrowser.py  emform.py  emhist.py  emimage2d.py  emimage3d.py  emimage3diso.py  emimage3dslice.py  emimage3dsym.py  emimage3dvol.py  emimagemx.py  empdbviewer.py  emplot2d.py  emplot3d.py  emrctboxergui.py  emsave.py  emselector.py
programs/: CMakeLists.txt  e2boxer.py  e2boxer_old.py  e2ctf.py  e2ctfsim.py  e2evalimage.py  e2helixboxer.py  e2proc2d.py  e2proc3d_huge.py  e2projectmanager.py  e2seq2pdb.py  e2tomo_eval.py
recipes/eman/: build.sh  conda_build_config.yaml  conda_build_config.yaml.templ  meta.yaml  py_2.7.yaml  py_3.5.5_0.yaml  py_3.5.5_1.yaml  py_3.5.5_3.yaml  py_3.5.6.yaml  py_3.6.0.yaml  py_3.6.1_0.yaml  py_3.6.1_2.yaml  py_3.6.2_0.yaml  py_3.6.2_12.yaml  py_3.6.2_14.yaml  py_3.6.2_15.yaml  py_3.6.2_18.yaml  py_3.6.3_0.yaml  py_3.6.3_2.yaml  py_3.6.3_3.yaml  py_3.6.3_4.yaml  py_3.6.4_0.yaml  py_3.6.4_1.yaml  py_3.6.4_3.yaml  py_3.6.5_0.yaml  py_3.6.5_1.yaml  py_3.6.6_0.yaml  py_3.6.7_0.yaml
sparx/doc/: sort3d_depth.txt
sparx/libpy/: alignment.py  applications.py  filter.py  fundamentals.py  global_def.py  isac.py  logger.py  morphology.py  multi_shc.py  pixel_error.py  projection.py  reconstruction.py  sparx.py  sparx_alignment.py  sparx_applications.py  sparx_filter.py  sparx_fundamentals.py  sparx_global_def.py  sparx_isac.py  sparx_morphology.py  sparx_multi_shc.py  sparx_pixel_error.py  sparx_projection.py  sparx_reconstruction.py  sparx_statistics.py  sparx_user_functions.py  sparx_utilities.py  statistics.py  user_functions.py  utilities.py
sparx/templates/: 3dg.py  import_SPIDER_320.py  import_SPIDER_refi.py  install_sxpatch.py  randomize2d.py  search_ali3d.py  sxgui_template.py  wikiparser.py
sparx/tests/: test_fundamentals.py
sphire/doc/: meridien.txt  sort3d_depth.txt  unblur.txt
sphire/libpy/: alignment.py  applications.py  multi_shc.py  sp_applications.py  sp_ctf_refine_plotting.py  sp_fundamentals.py  sp_global_def.py  sp_logger.py  sp_morphology.py  sparx.py  utilities.py
sphire/templates/: sxgui_template.py  wikiparser.py
sphire/utils/: 00_remove_comments.py  01_unwildcard.py  02_remove_unused.py  03_final_finish.py  remove_comments.py
tests/: future_import_tests.sh
utils/: remove_unused.py  unwildcard.py
